# aetheris-rs

./: README.md  package.json
.github/workflows/: ci.yml
docs/: repo-analysis.md
docs/superpowers/plans/: 2026-07-08-container-monitoring.md
docs/superpowers/specs/: 2026-07-08-container-monitoring-design.md  2026-07-09-instrument-deck-ui-design.md
scripts/: setup-windows.ps1
src/: index.css  index.html  index.js  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/ebpf/: Cargo.toml
src-tauri/ebpf/.cargo/: config.toml
src-tauri/ebpf/src/: main.rs
src-tauri/src/: database.rs  main.rs
src-tauri/src/analytics/: mod.rs  rul.rs
src-tauri/src/monitors/: ai_observability.rs  battery.rs  cloud_ranges.rs  containers.rs  ebpf_egress.rs  external_baselines.rs  gpu.rs  mod.rs  network_topology.rs  registry.rs  smart_disk.rs
src-tauri/src/server/: mod.rs
