[package]
name = "aetheris-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Desktop-only build: no `[lib]` target. The staticlib/cdylib crate types and a
# separate `lib.rs::run()` entry point only exist to support Tauri mobile
# (android/ios) builds, and no `gen/android` or `gen/apple` targets are set up
# here. `main.rs` is the single real entry point.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.5"
reqwest = { version = "0.13.4", features = ["json", "stream", "query"] }
tokio = { version = "1.52.3", features = ["process"] }
which = "8.0.4"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = "0.4.45"
axum = "0.8.9"
starship-battery = "0.11.1"
tauri-plugin-shell = "2.3.5"
ipnet = { version = "2", features = ["serde"] }
async-stream = "0.3"
futures-util = "0.3"
plist = "1"
bollard = "0.21"
# eBPF egress byte-accounting (Linux, opt-in). Off by default so the normal
# cross-platform stable build is unaffected; enable with `--features ebpf`.
aya = { version = "0.14", optional = true }

[features]
# Compile + embed the eBPF egress probe and enable the runtime loader.
# Requires: Linux, a nightly toolchain with rust-src, and bpf-linker installed.
# Loading the probe additionally requires root / CAP_BPF + CAP_NET_ADMIN.
ebpf = ["dep:aya"]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }

